@@ -1,0 +1,11 @@
+#!/bin/sh
+# esddsp - wrapper script to allow *some* binary only programs to use esd
+
+# setup esd to hijack calls made to /dev/dsp
+export prefix=@prefix@
+export exec_prefix=@exec_prefix@
+export libdir=@libdir@
+export LD_PRELOAD=${libdir}/libesddsp.so:${libdir}/libesd.so
+
+# invoke the program with the args given
+"$@"
