@@ -1,3 +1,8 @@
+1998-10-19  Yo Ric Dude  <ricdude@ix.netcom.com>
+
+	* Makefile.am, esddsp.in, configure.in: automatically build the
+	esddsp wrapper script for Linux only
+
 Sun Oct 18 21:33:26 PDT 1998 Manish Singh <yosh@gimp.org>
 
 	* Makefile.am: add TODO and esddsp.c to EXTRA_DIST
